--- a/JobSearch/Components/Pages/Home.razor
+++ b/JobSearch/Components/Pages/Home.razor
@@ -109,7 +109,7 @@
                                                 </span>
                                             </div>
                                             <span class="badge bg-primary rounded-pill offer-jobtype">
-                                                @offer.JobType
+                                                @EnumText.Display(offer.JobType)
                                             </span>
                                         </div>
                                     </a>
