--- a/JobSearch/Components/Pages/JobOfferPages/PublicOffers.razor
+++ b/JobSearch/Components/Pages/JobOfferPages/PublicOffers.razor
@@ -245,7 +245,7 @@
                                     </span>
 
                                     <span class="detail-tag tag-type">
-                                        <i class="bi bi-briefcase-fill"></i> @offer.JobType
+                                        <i class="bi bi-briefcase-fill"></i> @EnumText.Display(offer.JobType)
                                     </span>
 
                                     @if (offer.IndustryCategory.HasValue)
